[gd_scene load_steps=15 format=3 uid="uid://cklv1i7s2rn0m"]

[ext_resource type="Script" path="res://Main.gd" id="1_fdahg"]
[ext_resource type="PackedScene" uid="uid://78gr5wipyaj1" path="res://paddle.tscn" id="3_eyea6"]
[ext_resource type="Script" path="res://HUD.gd" id="5_cm5b1"]
[ext_resource type="PackedScene" uid="uid://bwiyb5ullengg" path="res://ball.tscn" id="6_4mech"]
[ext_resource type="PackedScene" uid="uid://cc4i88qnwhy8k" path="res://tile_map_layers.tscn" id="6_5ldhk"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_vfbrh"]
friction = 0.0
bounce = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ali4k"]
size = Vector2(491, 14)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_kin4h"]
friction = 0.0
bounce = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ib28y"]
size = Vector2(14.875, 619.875)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_v6gmf"]
friction = 0.0
bounce = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i3d75"]
size = Vector2(748.146, 86.0456)

[sub_resource type="LabelSettings" id="LabelSettings_5pf6k"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_ounqy"]
line_spacing = 2.0
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_anlan"]
font_size = 50

[node name="Main" type="Node"]
script = ExtResource("1_fdahg")

[node name="Paddle" parent="." instance=ExtResource("3_eyea6")]

[node name="BallSpawnPosition" type="Marker2D" parent="."]
position = Vector2(240, 300)

[node name="PadleStartPosition" type="Marker2D" parent="."]
position = Vector2(240, 600)

[node name="AboveWall" type="StaticBody2D" parent="."]
physics_material_override = SubResource("PhysicsMaterial_vfbrh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AboveWall"]
position = Vector2(240, -6)
shape = SubResource("RectangleShape2D_ali4k")

[node name="LeftWall" type="StaticBody2D" parent="."]
physics_material_override = SubResource("PhysicsMaterial_kin4h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
position = Vector2(-8.875, 309.063)
shape = SubResource("RectangleShape2D_ib28y")

[node name="RightWall" type="StaticBody2D" parent="."]
position = Vector2(-9, -41)
physics_material_override = SubResource("PhysicsMaterial_v6gmf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
position = Vector2(489.563, 346.375)
shape = SubResource("RectangleShape2D_ib28y")

[node name="DeadZone" type="Area2D" parent="."]
light_mask = 0
visibility_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeadZone"]
light_mask = 0
visibility_layer = 0
position = Vector2(246.5, 719.313)
scale = Vector2(0.680348, 0.704587)
shape = SubResource("RectangleShape2D_i3d75")

[node name="ClearMarginTimer" type="Timer" parent="."]

[node name="NewGameTimer" type="Timer" parent="."]
one_shot = true

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("5_cm5b1")

[node name="StartButton" type="Button" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 60.0
offset_right = 50.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
text = "Start"

[node name="RetryButton" type="Button" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = 60.0
offset_right = 30.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2
text = "Retry
"

[node name="NextButton" type="Button" parent="HUD"]
offset_left = 210.0
offset_top = 422.0
offset_right = 270.0
offset_bottom = 453.0
text = "Next
"

[node name="ExitButton" type="Button" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = 283.0
offset_right = -140.0
offset_bottom = 323.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit"

[node name="ScoreLabel" type="Label" parent="HUD"]
offset_left = 410.0
offset_top = 2.0
offset_right = 469.0
offset_bottom = 36.0
text = "0"
label_settings = SubResource("LabelSettings_5pf6k")
horizontal_alignment = 2
vertical_alignment = 1

[node name="ScoreResultLabel" type="Label" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -37.0
offset_right = 55.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
label_settings = SubResource("LabelSettings_ounqy")
horizontal_alignment = 1

[node name="OparatingLabel" type="Label" parent="HUD"]
offset_left = 25.0
offset_top = 686.0
offset_right = 97.0
offset_bottom = 709.0
text = "A:左  D:右"

[node name="MessageLabel" type="Label" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -67.0
offset_right = 46.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 2
text = "READY"
label_settings = SubResource("LabelSettings_anlan")

[node name="Ball" parent="." instance=ExtResource("6_4mech")]

[node name="TileMapLayers" parent="." instance=ExtResource("6_5ldhk")]

[connection signal="body_entered" from="DeadZone" to="." method="_on_dead_zone_body_entered"]
[connection signal="timeout" from="ClearMarginTimer" to="." method="_on_clear_margin_timer_timeout"]
[connection signal="timeout" from="NewGameTimer" to="." method="_on_new_game_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="pressed" from="HUD/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="HUD/StartButton" to="Ball" method="_on_start_button_pressed"]
[connection signal="pressed" from="HUD/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="HUD/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="HUD/NextButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="HUD/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="block_broke" from="Ball" to="." method="_on_ball_block_broke"]
